--- a/estilos/media-query.css
+++ b/estilos/media-query.css
@@ -3,15 +3,44 @@
 
 
 @media screen and (min-width: 768px) and (max-width: 992px){
+    main{
+        background-image: linear-gradient(to top, #ffd6b8, #ff9c60);
+    }
+
     #box-login{
-        width: 90vw;
+        width: 80vw;
     }
 
     .imagem{
         float: left;
+        width: 30%;
+        height: 100%;
     }
 
     .formulario{
         float: right;
+        width: 70%;
+        
+    }
+}
+
+@media screen and (min-width: 992px){
+    main{
+        background-image: linear-gradient(to top, #ffd6b8, #ff9c60);
+    }
+
+    #box-login{
+        width: 990px;
+    }
+
+    .imagem{
+        float: left;
+        width: 50%;
+        height: 100%;
+    }
+
+    .formulario{
+        float: right;
+        width: 50%;
     }
 }
