--- a/estilos/style.css
+++ b/estilos/style.css
@@ -38,6 +38,10 @@ main{
     border-radius: 20px;
     overflow: hidden;
     box-shadow: 2px 2px 10px #0000007a;
+
+    transition: width 1s, height 1s;
+    transition-timing-function: ease;
+
 }
 
 .imagem{
